<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/print_keybord"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bac1"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible"
    tools:showIn="@layout/layout_keybord">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/key_item9"
            style="@style/keybord"
            android:text="@string/print_item10" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/key_item10"
            style="@style/keybord"
            android:text="@string/print_item11" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/key_item11"
            style="@style/keybord"
            android:text="@string/print_item12" />


        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/key_item4"
            style="@style/keybord"
            android:text="@string/print_item5" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/key_item5"
            style="@style/keybord"
            android:text="@string/print_item6" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/key_item6"
            style="@style/keybord"
            android:text="@string/print_item7" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/key_item7"
            style="@style/keybord"
            android:text="@string/print_item8" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/key_item8"
            style="@style/keybord"
            android:text="@string/print_item9" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/key_item1"
                    style="@style/keybord"
                    android:text="@string/print_item2" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/key_item2"
                    style="@style/keybord"
                    android:text="@string/print_item3" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/key_item3"
                    style="@style/keybord"
                    android:text="@string/print_item4" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/key_item14"
                    style="@style/keybord"
                    android:text="@string/print_item15" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/key_item13"
                    style="@style/keybord"
                    android:text="@string/print_item14" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/key_item15"
                    style="@style/keybord"
                    android:text="@string/print_item19" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.75">

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/key_item12"
                style="@style/keybord"
                android:layout_height="100dp"

                android:text="确\n定" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>